# RAB_PROJ2

./: README.md
rab_project2/: CMakeLists.txt  README.md  consumer_main.cpp  producer_main.cpp
rab_project2/common/: shared_memory.cpp  shared_memory.h
rab_project2/compressor/: compressor.cpp  compressor.h
rab_project2/consumer/: consumer.cpp  consumer.h
rab_project2/producer/: producer.cpp  producer.h
